--- a/index.html
+++ b/index.html
@@ -1,26 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Spotify</title>
 </head>
+
 <body>
-    <div class="debug wrapper">
+
+    <div class="wrapper">
+        <!-- Contain header sideba and main -->
         <div class="debug content d-flex">
-            <div class="debug header">
-
+            <!-- header -->
+            <div class="debug header d-flex">
+                <a href="#" class="btn">effettua l'upgrade</a>
             </div>
+            <!-- sidebar -->
             <div id="sidebar" class="debug ">
-
+                SIDEBAR
             </div>
             <main>
+                <!-- nav-bar -->
+                <nav class="debug">
+                    <ul class="d-flex just-center">
+                        <li>
+                            <a href="#">in evidenza</a>
+                        </li>
+                        <li>
+                            <a href="#">podcast</a>
+                        </li>
+                        <li>
+                            <a href="#">classifiche</a>
+                        </li>
+                        <li>
+                            <a href="#">generi e mood</a>
+                        </li>
+                        <li>
+                            <a href="#">nuove uscite</a>
+                        </li>
+                        <li>
+                            <a href="#">scopri</a>
+                        </li>
+                    </ul>
+                </nav>
+
+                <section id="recent" class="section-container">
+                    <!-- <div class="section-title"> -->
+                    <h2>Recently played</h2>
+                    <!-- </div> -->
+                    <div class="card-container d-flex">
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="img/metal_lifting.jpg" alt="">
+                                <div class="img-hover">
+                                    <i class="fa-regular fa-circle-play"></i>
+                                </div>
+                            </div>
+
+                            <div class="card-title">
+                                <h3>
+                                    Heavy Metal
+                                </h3>
+                                <dd>Subtitle</dd>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </main>
         </div>
         <div id="toolbar" class="debug ">
-
+            TOOLBAR
         </div>
     </div>
 </body>
+
 </html>
