--- a/index.html
+++ b/index.html
@@ -54,10 +54,8 @@
                 </nav>
 
                 <section id="recent" class="section-container">
-                    <!-- <div class="section-title"> -->
                     <h2>Recently played</h2>
-                    <!-- </div> -->
-                    <div class="card-container d-flex">
+                    <div class="row d-flex">
                         <div class="card">
                             <div class="card-img">
                                 <img src="img/metal_lifting.jpg" alt="">
@@ -65,7 +63,81 @@
                                     <i class="fa-regular fa-circle-play"></i>
                                 </div>
                             </div>
+                            <div class="card-title">
+                                <h3>
+                                    Heavy Metal
+                                </h3>
+                                <p>Subtitle</p>
+                            </div>
+                        </div>
 
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="img/stranger.jpeg" alt="">
+                                <div class="img-hover">
+                                    <i class="fa-regular fa-circle-play"></i>
+                                </div>
+                            </div>
+                            <div class="card-title">
+                                <h3>
+                                    Stranger things, Vol. 1(a Netflix Original Series Soundtrack)
+                                </h3>
+                                <p>Kyle Dixon & Micheal Stein</p>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="img/aquietplace.jpeg" alt="">
+                                <div class="img-hover">
+                                    <i class="fa-regular fa-circle-play"></i>
+                                </div>
+                            </div>
+                            <div class="card-title">
+                                <h3>
+                                    A quiet place
+                                </h3>
+                                <p>Subtitle</p>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="img/split.jpeg" alt="">
+                                <div class="img-hover">
+                                    <i class="fa-regular fa-circle-play"></i>
+                                </div>
+                            </div>
+                            <div class="card-title">
+                                <h3>
+                                    Split
+                                </h3>
+                                <p>Subtitle</p>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="img/cure.jpeg" alt="">
+                                <div class="img-hover">
+                                    <i class="fa-regular fa-circle-play"></i>
+                                </div>
+                            </div>
+                            <div class="card-title">
+                                <h3>
+                                    A cure of wellness
+                                </h3>
+                                <p>Subtitle</p>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="img/sinister.jpeg" alt="">
+                                <div class="img-hover">
+                                    <i class="fa-regular fa-circle-play"></i>
+                                </div>
+                            </div>
                             <div class="card-title">
                                 <h3>
                                     Heavy Metal
