section create for & section popular

--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
 
     <div class="wrapper">
         <!-- Contain header sideba and main -->
-        <div class="debug content d-flex">
+        <div class=" content d-flex">
             <!-- header -->
-            <div class="debug header d-flex">
+            <div class=" header d-flex">
                 <a href="#" class="btn">effettua l'upgrade</a>
             </div>
             <!-- sidebar -->
-            <div id="sidebar" class="debug ">
+            <div id="sidebar" class=" ">
                 SIDEBAR
             </div>
             <main>
                 <!-- nav-bar -->
-                <nav class="debug">
+                <nav class="">
                     <ul class="d-flex just-center">
                         <li>
                             <a href="#">in evidenza</a>
@@ -143,6 +143,80 @@
                                     Heavy Metal
                                 </h3>
                                 <p>Subtitle</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
+                <section id="create-for" class="section-container">
+                    <h2>
+                        Creato per John Doe
+                    </h2>
+                    <p>
+                        Più ascolti, più accurati saranno i suggerimenti.
+                    </p>
+                    <div class="row d-flex">
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="img/radar.jpeg" alt="">
+                                <div class="img-hover">
+                                    <i class="fa-regular fa-circle-play"></i>
+                                </div>
+                            </div>
+                            <div class="card-title">
+                                <h3>
+                                    Release radar
+                                </h3>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="img/mixdaily.jpeg" alt="">
+                                <div class="img-hover">
+                                    <i class="fa-regular fa-circle-play"></i>
+                                </div>
+                            </div>
+                            <div class="card-title">
+                                <h3>
+                                    Daily Mix 1
+                                </h3>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
+                <section id="popular" class="section-container">
+                    <h2>
+                        Artisti più popolari
+                    </h2>
+                    <p>
+                        Più ascolti, più accurati saranno i suggerimenti.
+                    </p>
+                    <div class="row d-flex">
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="img/youg.jpeg" alt="">
+                                <div class="img-hover">
+                                    <i class="fa-regular fa-circle-play"></i>
+                                </div>
+                            </div>
+                            <div class="card-title">
+                                <h3>
+                                    Release radar
+                                </h3>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="img/einaudi.jpeg" alt="">
+                                <div class="img-hover">
+                                    <i class="fa-regular fa-circle-play"></i>
+                                </div>
+                            </div>
+                            <div class="card-title">
+                                <h3>
+                                    Release radar
+                                </h3>
                             </div>
                         </div>
                     </div>
