--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <main>
                 <!-- nav-bar -->
-                <nav class="">
+                <nav>
                     <ul class="d-flex just-center">
                         <li>
                             <a href="#">in evidenza</a>
@@ -60,7 +60,7 @@
                             <div class="card-img">
                                 <img src="img/metal_lifting.jpg" alt="">
                                 <div class="img-hover">
-                                    <i class="fa-regular fa-circle-play"></i>
+                                    <i class="fa-sharp fa-solid fa-circle-play"></i>
                                 </div>
                             </div>
                             <div class="card-title">
@@ -75,7 +75,7 @@
                             <div class="card-img">
                                 <img src="img/stranger.jpeg" alt="">
                                 <div class="img-hover">
-                                    <i class="fa-regular fa-circle-play"></i>
+                                    <i class="fa-sharp fa-solid fa-circle-play"></i>
                                 </div>
                             </div>
                             <div class="card-title">
@@ -90,7 +90,7 @@
                             <div class="card-img">
                                 <img src="img/aquietplace.jpeg" alt="">
                                 <div class="img-hover">
-                                    <i class="fa-regular fa-circle-play"></i>
+                                    <i class="fa-sharp fa-solid fa-circle-play"></i>
                                 </div>
                             </div>
                             <div class="card-title">
@@ -105,7 +105,7 @@
                             <div class="card-img">
                                 <img src="img/split.jpeg" alt="">
                                 <div class="img-hover">
-                                    <i class="fa-regular fa-circle-play"></i>
+                                    <i class="fa-sharp fa-solid fa-circle-play"></i>
                                 </div>
                             </div>
                             <div class="card-title">
@@ -120,7 +120,7 @@
                             <div class="card-img">
                                 <img src="img/cure.jpeg" alt="">
                                 <div class="img-hover">
-                                    <i class="fa-regular fa-circle-play"></i>
+                                    <i class="fa-sharp fa-solid fa-circle-play"></i>
                                 </div>
                             </div>
                             <div class="card-title">
@@ -135,7 +135,7 @@
                             <div class="card-img">
                                 <img src="img/sinister.jpeg" alt="">
                                 <div class="img-hover">
-                                    <i class="fa-regular fa-circle-play"></i>
+                                    <i class="fa-sharp fa-solid fa-circle-play"></i>
                                 </div>
                             </div>
                             <div class="card-title">
@@ -160,7 +160,7 @@
                             <div class="card-img">
                                 <img src="img/radar.jpeg" alt="">
                                 <div class="img-hover">
-                                    <i class="fa-regular fa-circle-play"></i>
+                                    <i class="fa-sharp fa-solid fa-circle-play"></i>
                                 </div>
                             </div>
                             <div class="card-title">
@@ -173,7 +173,7 @@
                             <div class="card-img">
                                 <img src="img/mixdaily.jpeg" alt="">
                                 <div class="img-hover">
-                                    <i class="fa-regular fa-circle-play"></i>
+                                    <i class="fa-sharp fa-solid fa-circle-play"></i>
                                 </div>
                             </div>
                             <div class="card-title">
@@ -196,26 +196,26 @@
                         <div class="card">
                             <div class="card-img">
                                 <img src="img/youg.jpeg" alt="">
-                                <div class="img-hover">
-                                    <i class="fa-regular fa-circle-play"></i>
+                                <div class="img-hover-rounded">
+                                    <i class="fa-sharp fa-solid fa-circle-play"></i>
                                 </div>
                             </div>
                             <div class="card-title">
                                 <h3>
-                                    Release radar
+                                    Lana del rey
                                 </h3>
                             </div>
                         </div>
                         <div class="card">
                             <div class="card-img">
                                 <img src="img/einaudi.jpeg" alt="">
-                                <div class="img-hover">
-                                    <i class="fa-regular fa-circle-play"></i>
+                                <div class="img-hover-rounded">
+                                    <i class="fa-sharp fa-solid fa-circle-play"></i>
                                 </div>
                             </div>
                             <div class="card-title">
                                 <h3>
-                                    Release radar
+                                    Ludovico Einaudi
                                 </h3>
                             </div>
                         </div>
