--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
                         <div class="card">
                             <div class="card-img">
                                 <img src="img/metal_lifting.jpg" alt="">
-                                <div class="img-hover">
-                                    <i class="fa-sharp fa-solid fa-circle-play"></i>
-                                </div>
+                                <i class="fa-sharp fa-solid fa-circle-play icon"></i>
                             </div>
                             <div class="card-title">
                                 <h3>
@@ -74,7 +72,7 @@
                         <div class="card">
                             <div class="card-img">
                                 <img src="img/stranger.jpeg" alt="">
-                                <div class="img-hover">
+                                <div class="icon">
                                     <i class="fa-sharp fa-solid fa-circle-play"></i>
                                 </div>
                             </div>
@@ -89,7 +87,7 @@
                         <div class="card">
                             <div class="card-img">
                                 <img src="img/aquietplace.jpeg" alt="">
-                                <div class="img-hover">
+                                <div class="icon">
                                     <i class="fa-sharp fa-solid fa-circle-play"></i>
                                 </div>
                             </div>
@@ -104,7 +102,7 @@
                         <div class="card">
                             <div class="card-img">
                                 <img src="img/split.jpeg" alt="">
-                                <div class="img-hover">
+                                <div class="icon">
                                     <i class="fa-sharp fa-solid fa-circle-play"></i>
                                 </div>
                             </div>
@@ -119,7 +117,7 @@
                         <div class="card">
                             <div class="card-img">
                                 <img src="img/cure.jpeg" alt="">
-                                <div class="img-hover">
+                                <div class="icon">
                                     <i class="fa-sharp fa-solid fa-circle-play"></i>
                                 </div>
                             </div>
@@ -134,7 +132,7 @@
                         <div class="card">
                             <div class="card-img">
                                 <img src="img/sinister.jpeg" alt="">
-                                <div class="img-hover">
+                                <div class="icon">
                                     <i class="fa-sharp fa-solid fa-circle-play"></i>
                                 </div>
                             </div>
@@ -159,7 +157,7 @@
                         <div class="card">
                             <div class="card-img">
                                 <img src="img/radar.jpeg" alt="">
-                                <div class="img-hover">
+                                <div class="icon">
                                     <i class="fa-sharp fa-solid fa-circle-play"></i>
                                 </div>
                             </div>
@@ -172,7 +170,7 @@
                         <div class="card">
                             <div class="card-img">
                                 <img src="img/mixdaily.jpeg" alt="">
-                                <div class="img-hover">
+                                <div class="icon">
                                     <i class="fa-sharp fa-solid fa-circle-play"></i>
                                 </div>
                             </div>
@@ -196,7 +194,7 @@
                         <div class="card">
                             <div class="card-img">
                                 <img src="img/youg.jpeg" alt="">
-                                <div class="img-hover-rounded">
+                                <div class="icon-rounded">
                                     <i class="fa-sharp fa-solid fa-circle-play"></i>
                                 </div>
                             </div>
@@ -209,7 +207,7 @@
                         <div class="card">
                             <div class="card-img">
                                 <img src="img/einaudi.jpeg" alt="">
-                                <div class="img-hover-rounded">
+                                <div class="icon-rounded">
                                     <i class="fa-sharp fa-solid fa-circle-play"></i>
                                 </div>
                             </div>
