--- a/index.html
+++ b/index.html
@@ -25,8 +25,62 @@
                 <a href="#" class="btn">effettua l'upgrade</a>
             </div>
             <!-- sidebar -->
-            <div id="sidebar" class=" ">
-                SIDEBAR
+            <div id="sidebar" class="d-flex flex-col between">
+                <div class="d-flex flex-col">
+                    <img src="img/logo.svg" alt="logo" class="logo-side">
+                    <img src="img/logo-small.svg" alt="logo small" class="icon-side">
+                    <div class="first-list">
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    <img src="img/home.svg" alt="">
+                                </a>
+                                <a href="#">
+                                    Home
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="img/search.svg" alt="">
+                                </a>
+                                <a href="#">
+                                    Cerca
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="img/libreria.svg" alt="">
+                                </a>
+                                <a href="#">
+                                    La tua libreria
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="playlist ">
+                        <h4>playlist</h4>
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    <i class="fa-sharp fa-solid fa-square-plus"></i>
+                                </a>
+                                <a href="#">Crea Playlist</a>
+                            </li>
+                            <li><a href="#">Nome playlist</a></li>
+                            <li><a href="#">Nome playlist</a></li>
+                            <li><a href="#">Nome playlist</a></li>
+                            <li><a href="#">Nome playlist</a></li>
+                            <li><a href="#">Nome playlist</a></li>
+                            <li><a href="#">Nome playlist</a></li>
+                            <li><a href="#">Nome playlist</a></li>
+                            <li><a href="#">Nome playlist</a></li>
+                        </ul>
+                    </div>
+
+                </div>
+                <div class="side-bottom">
+                    <img src="img" alt="">
+                </div>
             </div>
             <main>
                 <!-- nav-bar -->
@@ -59,7 +113,9 @@
                         <div class="card">
                             <div class="card-img">
                                 <img src="img/metal_lifting.jpg" alt="">
-                                <i class="fa-sharp fa-solid fa-circle-play icon"></i>
+                                <div class="icon">
+                                    <i class="fa-sharp fa-solid fa-circle-play"></i>
+                                </div>
                             </div>
                             <div class="card-title">
                                 <h3>
