--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="d-flex flex-col">
                     <img src="img/logo.svg" alt="logo" class="logo-side">
                     <img src="img/logo-small.svg" alt="logo small" class="icon-side">
-                    <div class="first-list">
+                    <div class="list-top">
                         <ul>
                             <li>
                                 <a href="#">
@@ -78,8 +78,17 @@
                     </div>
 
                 </div>
-                <div class="side-bottom">
-                    <img src="img" alt="">
+                <div class="bottom-side">
+                    <div class="d-flex bord">
+                        <img src="img/download.svg" alt="">
+                        <a href="#"> Install app</a>
+                    </div>
+                    <div class="profile">
+                        <div class="square align-center ">
+                        <img src="img/profile.svg" alt="">
+                    </div>
+                        <h5>John Doe</h5>
+                    </div>
                 </div>
             </div>
             <main>
