media query sidebar

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="playlist ">
+                    <div class="playlist">
                         <h4>playlist</h4>
                         <ul>
                             <li>
@@ -286,8 +286,12 @@
                 </section>
             </main>
         </div>
-        <div id="toolbar" class="debug ">
-            TOOLBAR
+        <div id="toolbar" class="d-flex between">
+            <div class="tool-left">
+                
+            </div>
+            <div class="tool-center"></div>
+            <div class="tool-right"></div>
         </div>
     </div>
 </body>
