--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <div class="wrapper">
-        <!-- Contain header sideba and main -->
+        <!-- Contain header sidebar and main -->
         <div class=" content d-flex">
             <!-- header -->
             <div class=" header d-flex">
@@ -288,10 +288,39 @@
         </div>
         <div id="toolbar" class="d-flex between">
             <div class="tool-left">
-                
+                <img src="img/sinister.jpeg" alt="" class="tool-img">
+                <div class="played">
+                    <h5>Sinister</h5>
+                    <span>Brano nome</span>
+                </div>
+                <div class="tool-icon d-flex align-center">
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-regular fa-folder"></i>
+                </div>
             </div>
-            <div class="tool-center"></div>
-            <div class="tool-right"></div>
+
+            <div class="tool-center">
+                <div>
+                    <div class="tool-top-center">
+                        <i class="fa-solid fa-shuffle"></i>
+                        <i class="fa-solid fa-backward-step"></i>
+                        <i class="fa-regular fa-circle-play"></i>
+                        <i class="fa-solid fa-forward-step"></i>
+                        <i class="fa-solid fa-rotate-right"></i>
+                    </div>
+                    <div class="tool-bottom-center">
+                        <span>0.25</span>
+                        <div class="bar"></div>
+                        <span>4.20</span>
+                    </div>
+                </div>
+            </div>
+            <div class="tool-right">
+                <i class="fa-sharp fa-solid fa-list"></i>
+                <i class="fa-solid fa-desktop"></i>
+                <i class="fa-solid fa-volume-high"></i>
+                <div class="mini-bar"></div>
+            </div>
         </div>
     </div>
 </body>
