--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <a href="#"> Install app</a>
                     </div>
                     <div class="profile">
-                        <div class="square align-center ">
+                        <div class="img-profile align-center ">
                         <img src="img/profile.svg" alt="">
                     </div>
                         <h5>John Doe</h5>
@@ -293,7 +293,7 @@
                     <h5>Sinister</h5>
                     <span>Brano nome</span>
                 </div>
-                <div class="tool-icon d-flex align-center">
+                <div class="tool-left-icon d-flex align-center">
                     <i class="fa-regular fa-heart"></i>
                     <i class="fa-regular fa-folder"></i>
                 </div>
