media query toolbar add hover tloolbar

--- a/index.html
+++ b/index.html
@@ -287,39 +287,37 @@
             </main>
         </div>
         <div id="toolbar" class="d-flex between">
-            <div class="tool-left">
+            <div class="tool-left d-flex">
                 <img src="img/sinister.jpeg" alt="" class="tool-img">
                 <div class="played">
                     <h5>Sinister</h5>
-                    <span>Brano nome</span>
+                    <p>Nome brano</p>
                 </div>
-                <div class="tool-left-icon d-flex align-center">
+                <div class="tool-left-icon d-flex">
                     <i class="fa-regular fa-heart"></i>
                     <i class="fa-regular fa-folder"></i>
                 </div>
             </div>
-
-            <div class="tool-center">
-                <div>
-                    <div class="tool-top-center">
-                        <i class="fa-solid fa-shuffle"></i>
-                        <i class="fa-solid fa-backward-step"></i>
-                        <i class="fa-regular fa-circle-play"></i>
-                        <i class="fa-solid fa-forward-step"></i>
-                        <i class="fa-solid fa-rotate-right"></i>
-                    </div>
-                    <div class="tool-bottom-center">
+            <div class="tool-center d-flex flex-col">
+                <div class="tool-top-center d-flex">
+                    <i class="fa-solid fa-shuffle"></i>
+                    <i class="fa-solid fa-backward-step"></i>
+                    <i class="fa-regular fa-circle-play play-hover"></i>
+                    <i class="fa-solid fa-forward-step"></i>
+                    <i class="fa-solid fa-rotate-right"></i>
+                </div>
+                <div class="tool-bottom-center">
                         <span>0.25</span>
                         <div class="bar"></div>
                         <span>4.20</span>
                     </div>
                 </div>
-            </div>
-            <div class="tool-right">
+            <div class="tool-right flex-end">
                 <i class="fa-sharp fa-solid fa-list"></i>
                 <i class="fa-solid fa-desktop"></i>
                 <i class="fa-solid fa-volume-high"></i>
-                <div class="mini-bar"></div>
+                <div class="mini-bar">
+                </div>
             </div>
         </div>
     </div>
