--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
             </div>
             <!-- sidebar -->
             <div id="sidebar" class="d-flex flex-col between">
-                <div class="d-flex flex-col">
+                <div class="side-top d-flex flex-col">
                     <img src="img/logo.svg" alt="logo" class="logo-side">
                     <img src="img/logo-small.svg" alt="logo small" class="icon-side">
                     <div class="list-top">
                         <ul>
                             <li>
                                 <a href="#">
-                                    <img src="img/home.svg" alt="">
+                                    <img src="img/home.svg" alt="Home">
                                 </a>
                                 <a href="#">
                                     Home
@@ -41,7 +41,7 @@
                             </li>
                             <li>
                                 <a href="#">
-                                    <img src="img/search.svg" alt="">
+                                    <img src="img/search.svg" alt="Cerca">
                                 </a>
                                 <a href="#">
                                     Cerca
@@ -49,7 +49,7 @@
                             </li>
                             <li>
                                 <a href="#">
-                                    <img src="img/libreria.svg" alt="">
+                                    <img src="img/libreria.svg" alt="Libreria">
                                 </a>
                                 <a href="#">
                                     La tua libreria
