--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="playlist">
+                    <div class="playlist d-flex flex-col">
                         <h4>playlist</h4>
                         <ul>
                             <li>
@@ -293,7 +293,7 @@
                     <h5>Sinister</h5>
                     <p>Nome brano</p>
                 </div>
-                <div class="tool-left-icon d-flex">
+                <div class="tool-left-icon d-flex between">
                     <i class="fa-regular fa-heart"></i>
                     <i class="fa-regular fa-folder"></i>
                 </div>
