addbord on nav main

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         <div id="toolbar" class="d-flex between">
             <div class="tool-left d-flex">
                 <img src="img/sinister.jpeg" alt="" class="tool-img">
-                <div class="played">
+                <div class="in-play">
                     <h5>Sinister</h5>
                     <p>Nome brano</p>
                 </div>
