add progress bar at tool center bottom

--- a/index.html
+++ b/index.html
@@ -308,7 +308,9 @@
                 </div>
                 <div class="tool-bottom-center">
                         <span>0.25</span>
-                        <div class="bar"></div>
+                        <div class="full-bar">
+                            <div class="progress"></div>
+                        </div>
                         <span>4.20</span>
                     </div>
                 </div>
@@ -316,7 +318,10 @@
                 <i class="fa-sharp fa-solid fa-list"></i>
                 <i class="fa-solid fa-desktop"></i>
                 <i class="fa-solid fa-volume-high"></i>
-                <div class="mini-bar">
+                <div class="volume">
+                    <div class="full-bar">
+                    <div class="progress"></div>
+                </div>
                 </div>
             </div>
         </div>
