add class point and small-point

--- a/index.html
+++ b/index.html
@@ -309,7 +309,9 @@
                 <div class="tool-bottom-center">
                         <span>0.25</span>
                         <div class="full-bar">
-                            <div class="progress"></div>
+                            <div class="progress">
+                                <div class="point"></div>
+                            </div>
                         </div>
                         <span>4.20</span>
                     </div>
@@ -319,8 +321,10 @@
                 <i class="fa-solid fa-desktop"></i>
                 <i class="fa-solid fa-volume-high"></i>
                 <div class="volume">
-                    <div class="full-bar">
-                    <div class="progress"></div>
+                    <div class="full-bar-right">
+                    <div class="progress">
+                        <div class="small-point"></div>
+                    </div>
                 </div>
                 </div>
             </div>
