modify scrool bar

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
                     </div>
                     <div class="playlist d-flex flex-col">
                         <h4>playlist</h4>
+                        <div class="create">
+                            <a href="#" class="d-flex align-center">
+                                <i class="fa-sharp fa-solid fa-square-plus"></i>
+                                Crea Playlist
+                            </a>
+                        </div>
                         <ul>
-                            <li>
-                                <a href="#">
-                                    <i class="fa-sharp fa-solid fa-square-plus"></i>
-                                </a>
-                                <a href="#">Crea Playlist</a>
-                            </li>
                             <li><a href="#">Nome playlist</a></li>
                             <li><a href="#">Nome playlist</a></li>
                             <li><a href="#">Nome playlist</a></li>
@@ -290,8 +290,12 @@
             <div class="tool-left d-flex">
                 <img src="img/sinister.jpeg" alt="" class="tool-img">
                 <div class="in-play">
-                    <h5>Sinister</h5>
-                    <p>Nome brano</p>
+                    <a href="#">
+                        <h5>Sinister</h5>
+                    </a>
+                    <a href="#">
+                        <p>Nome brano</p>
+                    </a>
                 </div>
                 <div class="tool-left-icon d-flex between">
                     <i class="fa-regular fa-heart"></i>
