--- a/index.html
+++ b/index.html
@@ -326,10 +326,9 @@
                 <i class="fa-solid fa-volume-high"></i>
                 <div class="volume">
                     <div class="full-bar-right">
-                    <div class="progress">
+                        <div class="progress"></div>
                         <div class="small-point"></div>
                     </div>
-                </div>
                 </div>
             </div>
         </div>
